solve smooth scroll on safari

--- a/css/general.css
+++ b/css/general.css
@@ -59,7 +59,7 @@
 html {
   font-size: 62.5%;
   overflow-x: hidden;
-  scroll-behavior: smooth;
+  /* scroll-behavior: smooth; */
 }
 
 body {
